fix(cli): no data returned for the attributes close #15